Fix minarca execute to work on Windows XP.
On Windows, the std buffer is too stall and the application hang waiting
to write in stdoutput.